vanishing-secrets/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vanishing-secrets
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: secrets.hinze.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: vanishing-secrets-service
              servicePort: 8080
  tls:
    - hosts:
        - secrets.hinze.dev
      secretName: secrets-hinze-tls-secret
